Always show a scrollbar to prevent layout shift

--- a/themes/ntun/sass/_base.scss
+++ b/themes/ntun/sass/_base.scss
@@ -13,6 +13,8 @@ html {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  /* Always show a scrollbar to prevent layout shift */
+  overflow-y: scroll;
 }
 
 body {
